[tool.poetry]
name = "fastapi-jwt-auth"
version = "0.1.0"
description = ""
authors = ["Luke Zhang <sd65745@126.com>", "Nyoman Pradipta Dewantara <nyomanpradipta120@gmail.com>"]
license = "MIT"
repository = "https://github.com/lukezzz/fastapi-jwt-auth"
readme = "README.md"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",    
  "Programming Language :: Python :: 3.11",    
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[[tool.poetry.source]]
name = "tsinhua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.8.0"
fastapi = ">=0.99.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
cryptography = ">41.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
httpx = "^0.25.0"
requests = "^2.27.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"